--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,5 @@
 {
     "testServerId": "605297471718948864",
-    "developersId": "433946205983342593"
+    "developersId": "433946205983342593",
+    "token": "MTE2ODEwMTQwNDM3MjYzMTU4Mg.GEpjps.REmmO6Hxc9bfpQJLjHgistqhpsET-t2yBSLXc8"
 }
